--- a/examples/in-browser/index.html
+++ b/examples/in-browser/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>jsvat-next in the browser</title>
+    <title>JSVAT-NEXT</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
